--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,13 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.9</version>
 		</dependency>
+		<!-- Cloudinary API -->
+		<dependency>
+		    <groupId>com.cloudinary</groupId>
+		    <artifactId>cloudinary-http44</artifactId>
+		    <version>1.31.0</version>
+		</dependency>
+		
 
 	</dependencies>
 	<build>
